VR: Fix element visibility checks in the optmimized tree case

Elements are possibly visible only if they ran the opacity computation
step.

BUG=835445
R=mthiesse

Change-Id: Ib45d933c36d509a8d0f224a1d2080fc88de78412
Reviewed-on: https://chromium-review.googlesource.com/1026071
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553199}
Former-commit-id: bc45151af3092838c1d02f1ca43f504932ae34b5